@@ -6,15 +6,15 @@ after_bundler do
   # set up a front-end framework using the rails_layout gem
   case prefs[:frontend]
     when 'simple'
-      generate 'layout simple -f'
+      generate 'layout:install simple -f'
     when 'bootstrap2'
-      generate 'layout bootstrap2 -f'
+      generate 'layout:install bootstrap2 -f'
     when 'bootstrap3'
-      generate 'layout bootstrap3 -f'
+      generate 'layout:install bootstrap3 -f'
     when 'foundation4'
-      generate 'layout foundation4 -f'
+      generate 'layout:install foundation4 -f'
     when 'foundation5'
-      generate 'layout foundation5 -f'
+      generate 'layout:install foundation5 -f'
   end
 
   ### GIT ###
@@ -25,7 +25,7 @@ end # after_bundler
 after_everything do
   say_wizard "recipe running after everything"
   # create navigation links using the rails_layout gem
-  generate 'navigation -f'
+  generate 'layout:navigation -f'
   # replace with specialized navigation partials
   if prefer :authentication, 'omniauth'
     if prefer :authorization, 'cancan'
